adding clear action

--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
         <button>Options</button>
         <button>Help</button>
       </header>
-      <canvas id="canvas" width="800" height="600"></canvas>
+      <section>
+        <aside>
+          <button class="active" title="pen">✏️</button>
+          <button title="erase">🔪</button>
+          <button title="rectangle">🟥</button>
+          <button title="ellipse">⭕</button>
+          <button title="picker">⛏️</button>
+          <button title="clear">🗑️</button>
+        </aside>
+        <canvas id="canvas" width="800" height="600"></canvas>
+      </section>
       <footer>
         <input type="color" id="color-picker" />
       </footer>
